progressbar and chart

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -10,5 +10,11 @@
       padding: 20px 25px;
       // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
+
+    .chart_sec {
+      display: flex;
+      gap: 20px;
+      padding: 20px 25px;
+    }
   }
 }
