--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -43,7 +43,7 @@
         height: 18px;
         width: 18px;
         border-radius: 50%;
-        background-color: #7451f8;
+        background-color: #ff74b1;
         color: white;
         display: flex;
         align-items: center;
