--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -38,8 +38,8 @@ $text_color: #3d3c42;
         font-size: 18px;
 
         &:hover {
-          background-color: #5b8fe9;
-          color: white;
+          background-color: #ffd6ec;
+          // color: white;
         }
         .icon {
           color: $icon_color;
