--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -16,5 +16,11 @@
       gap: 20px;
       padding: 20px 25px;
     }
+
+    .table {
+      margin-top: 20px;
+      padding: 20px 25px;
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+    }
   }
 }
