dashboard home_page done

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -13,14 +13,20 @@
 
     .chart_sec {
       display: flex;
-      gap: 20px;
+      // gap: 20px;
       padding: 20px 25px;
     }
 
     .table {
       margin-top: 20px;
+
       padding: 20px 25px;
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+
+      .title {
+        padding: 0px 0px 15px;
+        color: gray;
+      }
     }
   }
 }
