user-list page done

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -13,6 +13,10 @@ $text_color: #3d3c42;
     border-bottom: 1px solid #eee;
     border-right: 1px solid #eee;
     text-align: center;
+
+    h3 {
+      text-decoration: none;
+    }
   }
 
   .links {
