--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -14,7 +14,7 @@ $text_color: #3d3c42;
     border-right: 1px solid #eee;
     text-align: center;
 
-    h3 {
+    .text_none {
       text-decoration: none;
     }
   }
