--- a/src/Pages/AddNew/New.scss
+++ b/src/Pages/AddNew/New.scss
@@ -12,13 +12,14 @@
         gap: 10;
         padding: 20px;
         border-radius: 4px;
+        // position: relative;
 
         .image {
           flex: 4;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
+          // display: flex;
+          // flex-direction: column;
+          // justify-content: center;
+          // align-items: center;
 
           .add_new_user {
             color: rgba(128, 128, 128, 0.603);
@@ -35,6 +36,7 @@
             margin-top: 20px;
             // margin-left: auto;
             border-radius: 50%;
+            margin-left: 30%;
           }
         }
 
