dark mode adding

--- a/src/Pages/Detail/Detail.scss
+++ b/src/Pages/Detail/Detail.scss
@@ -11,7 +11,7 @@
       padding: 30px 25px;
 
       .user_detail {
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         text-align: center;
         padding: 20px;
         border-radius: 3px;
