--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -10,13 +10,14 @@
     display: flex;
     align-items: center;
     border-radius: 3px;
-    border: 0.5px solid lightgray;
+    border: 1px solid gray;
 
     input {
       border: none;
       outline: none;
       font-size: 14px;
       padding: 6px 10px;
+      // color: rgba(255, 255, 255, 0.925);
     }
 
     .search_icon {
