--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,18 @@
   background-color: #111;
   color: rgb(156, 156, 156);
 
+  .home {
+    .home_main {
+      .bg_color {
+        background-color: rgba(51, 51, 51, 0.425);
+      }
+    }
+  }
+
+  .item_listss {
+    background-color: #111;
+  }
+
   .strokee {
     stroke: rgba(228, 228, 228, 0.151);
   }
