--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -4,11 +4,19 @@
   justify-content: center;
 
   .home_main {
+    .bg_color {
+      width: 100%;
+      height: 200px;
+      border-bottom-right-radius: 20px;
+      border-bottom-left-radius: 20px;
+      background-color: #536def;
+    }
     .home_items {
       display: flex;
       gap: 20px;
       padding: 20px 25px;
       // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      margin-top: -100px;
     }
 
     .chart_sec {
