--- a/src/Components/ItemLists/itemlists.scss
+++ b/src/Components/ItemLists/itemlists.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 10px;
   border-radius: 6px;
+  background-color: white;
 
   .name {
     display: flex;
