dynamically input state change and input validation

--- a/src/Components/ProgressBar/progressBar.scss
+++ b/src/Components/ProgressBar/progressBar.scss
@@ -31,6 +31,10 @@
       width: 150px;
       margin-left: auto;
       margin-right: auto;
+
+      .progress_main {
+        color: #536def;
+      }
     }
 
     p {
