--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,4 +1,4 @@
-$icon_color: #7451f8;
+$icon_color: #4665fd;
 $text_color: #3d3c42;
 
 .sidebar {
@@ -44,7 +44,7 @@ $text_color: #3d3c42;
         font-size: 18px;
 
         &:hover {
-          background-color: #ffd6ec;
+          background-color: #eaf6f6;
           // color: white;
         }
         .icon {
