making it responsive

--- a/src/Components/Chart/chart.scss
+++ b/src/Components/Chart/chart.scss
@@ -1,6 +1,6 @@
 .chart_sec {
-  display: flex;
-  flex: 8;
+  display: grid;
+  grid-template-columns: 100%;
   box-sizing: border-box;
 
   .title {
