--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -12,7 +12,8 @@
       background-color: #536def;
     }
     .home_items {
-      display: flex;
+      display: grid;
+      grid-template-columns: 23% 23% 23% 23%;
       gap: 20px;
       padding: 20px 25px;
       // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -20,14 +21,16 @@
     }
 
     .chart_sec {
-      display: flex;
-      // gap: 20px;
-      padding: 20px 25px;
+      display: grid;
+      grid-template-columns: 25% 75%;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px 20px;
       box-sizing: border-box;
     }
 
     .table {
-      margin-top: 20px;
+      margin-top: 120px;
 
       padding: 20px 25px;
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
@@ -35,6 +38,79 @@
       .title {
         padding: 0px 0px 15px;
         color: gray;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .home {
+    display: grid;
+    grid-template-columns: 100%;
+    justify-content: center;
+
+    .home_sidebar {
+      display: none;
+    }
+
+    .home_main {
+      .bg_color {
+        // width: 100%;
+        // height: 160px;
+        // border-bottom-right-radius: 20px;
+        // border-bottom-left-radius: 20px;
+        // background-color: #536def;
+      }
+      .home_items {
+        display: grid;
+        grid-template-columns: 31% 31% 31%;
+        gap: 20px;
+      }
+
+      .chart_sec {
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: center;
+        gap: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .home {
+    .home_main {
+      .bg_color {
+        // width: 100%;
+        // height: 160px;
+        // border-bottom-right-radius: 20px;
+        // border-bottom-left-radius: 20px;
+        // background-color: #536def;
+      }
+      .home_items {
+        display: grid;
+        grid-template-columns: 48% 48%;
+        gap: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .home {
+    .home_main {
+      .bg_color {
+        // width: 100%;
+        height: 100px;
+        // border-bottom-right-radius: 20px;
+        // border-bottom-left-radius: 20px;
+        // background-color: #536def;
+      }
+      .home_items {
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: center;
+        gap: 20px;
       }
     }
   }
