--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,4 +1,4 @@
-$icon_color: #4665fd;
+$icon_color: #4665fdde;
 $text_color: #3d3c42;
 
 .sidebar {
@@ -42,10 +42,14 @@ $text_color: #3d3c42;
         border-radius: 4px;
         cursor: pointer;
         font-size: 18px;
+        transition: all 0.2s ease;
 
         &:hover {
-          background-color: #eaf6f6;
-          // color: white;
+          background-color: $icon_color;
+          color: white;
+        }
+        &:hover .icon {
+          color: white;
         }
         .icon {
           color: $icon_color;
