--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -20,6 +20,7 @@
       margin-top: -80px;
     }
 
+    /* The `.chart_sec` class is defining the styles for a section that contains a grid layout. */
     .chart_sec {
       display: grid;
       grid-template-columns: 25% 75%;
